# game-model

./: .gitignore  CMakeLists.txt
Classes/: AppDelegate.cpp  AppDelegate.h  GameScene.cpp  GameScene.h  Helpers.cpp  Helpers.h  LoadingScene.cpp  Objects.cpp  Objects.h
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  project.properties
proj.android/jni/: Android.mk  Application.mk  main.cpp
proj.android/res/values/: strings.xml
proj.ios_mac/game-model.xcodeproj/: project.pbxproj
